crates/bevy_ecs_compile_fail_tests/tests/ui/system_query_get_many_lifetime_safety.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A(usize);

fn system(mut query: Query<&mut A>, e: Res<Entity>) {
    let a1 = query.get_many([*e, *e]).unwrap();
    let a2 = query.get_mut(*e).unwrap();
    // this should fail to compile
    println!("{} {}", a1[0].0, a2.0);
}

fn main() {}
